--- a/tent.htm
+++ b/tent.htm
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<title>El Hoekstra</title>
+<title>Els Hoekstra</title>
 <link type='text/css'>
 <meta name="robots" content="noindex">
 <meta name="viewport"  content="initial-scale=1, width=device-width">
